[gd_scene load_steps=2 format=3 uid="uid://eh7vots85xjs"]

[ext_resource type="Script" uid="uid://qhu53e71r1xa" path="res://examples/module2_nodes_and_scenes/M2_04_Scene_Instancing_Example/instancing_logic.gd" id="1_logicscript"]

[node name="SceneInstancingDemo" type="Node2D"]
script = ExtResource("1_logicscript")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 250.0

[node name="InstructionLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Scene Instancing Demo"

[node name="InstanceButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Instance New Box"

[node name="ModifyLastButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Modify Last Box"

[node name="ShowPopupButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Show Popup Message"

[node name="ClearInstancesButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Clear Box Instances"

[node name="InstanceCountLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "Box Instances: 0"

[connection signal="pressed" from="VBoxContainer/InstanceButton" to="." method="_on_InstanceButton_pressed"]
[connection signal="pressed" from="VBoxContainer/ClearInstancesButton" to="." method="_on_ClearInstancesButton_pressed"]
